--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode=development",
     "start": "npm run build & webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -26,11 +27,16 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.12",
+    "gh-pages": "^3.2.3",
     "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/paigetiedeman/Power-Plant.git"
   }
 }
