--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "power-plant",
   "version": "1.0.0",
+  "homepage": "https://github.com/paigetiedeman/Power-Plant",
   "description": "",
   "main": "index.js",
+  "homepage": "https://github.com/paigetiedeman/Power-Plant",
   "scripts": {
     "build": "webpack --mode=development",
     "start": "npm run build & webpack-dev-server --open --mode development",
